# conway-wgpu

./: Cargo.toml  TODO.md
src/: conway_compute.wgsl  conway_renderer.wgsl  gui.rs  input.rs  lib.rs  main.rs  rendering_utils.rs
src/wgsl/: conway_common.wgsl  conway_compute.wgsl  conway_renderer.wgsl
