[package]
name = "conway-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.30.7", features = ["rwh_05"] }
egui = "0.30.0"
egui-wgpu = "0.30.0"
egui-winit = "0.30.0"
glam = { version = "0.29.2", features = ["bytemuck"] }
pollster = "0.4.0"
rand = "0.8.5"
wgpu = "23.0.1"
bytemuck = "1.21.0"
