[package]
name = "conway-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.30.7", features = ["rwh_05"] }
egui = "0.30.0"
egui-wgpu = "0.30.0"
egui-winit = "0.30.0"
glam = { version = "0.29.2", features = ["bytemuck"] }
pollster = "0.4.0"
rand = "0.8.5"
wgpu = { version = "23.0.1", features = ["naga-ir"] }
bytemuck = "1.21.0"
gilrs = "0.11.0"
bounded-vec-deque = "0.1.1"
naga_oil = "0.16.0"
